# clap-completion-example

./: Cargo.toml  build.rs
completions/: _xxx  _xxx.ps1  xxx.bash  xxx.elv  xxx.fish
src/: cli.rs  main.rs
